# video-subtitle-erasure

./: .gitignore  README.md  main.py  pyproject.toml
docs/: README.md  bilingual-paper-subtitle-erasure.md  implementation-notes.md  subtitle-erasure-design.md
subtitle_eraser/: __init__.py  autotune.py  bridge.py  cli.py  detection.py  evaluation.py  inpaint.py  masking.py  models.py  progress.py  regions.py  tasks.py  video.py  web.py
subtitle_eraser/static/: index.html
tests/: test_detection.py  test_evaluation.py  test_inpaint.py  test_masking.py  test_web.py
